Fix Path -> URL transformation: works fine on Win now